--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="primaryColor">#009688</color>
+    <color name="textSecondary">#757575</color>
+    <color name="buttonBackground">#009688</color>
+    <color name="buttonGoogleBackground">#FFFFFF</color>
+    <color name="dividerColor">#D3D3D3</color>
 </resources>
