--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="colorBottomBar">#6dc6c0</color>
+    <color name="onSelectedColorBotBar">#30aca8</color>
+    <color name="fondoContenedorFiltro">#f4f4f4</color>
+    <color name="txtResultados">#7c7c7d</color>
 </resources>
