--- a/app/src/main/res/layout/fragment_listar.xml
+++ b/app/src/main/res/layout/fragment_listar.xml
@@ -22,12 +22,10 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/contenedorFiltros"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
         android:background="@color/fondoContenedorFiltro"
+        android:layout_height="45dp"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/guideContResultados"
-        app:layout_constraintHeight="wrap_content_constrained"
         >
         <TextView
             android:id="@+id/lblResultado"
@@ -58,23 +56,30 @@
             />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideContResultados"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.18"/>
-
-    <com.google.android.material.search.SearchView
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/contenedorLista"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:hint="@string/tooltipBarraBusqueda">
-        <!-- Search suggestions/results go here (ScrollView, RecyclerView, etc.). -->
-    </com.google.android.material.search.SearchView>
+        android:layout_height="0dp"
+        android:background="@color/fondoContenedorFiltro"
+        app:layout_constraintTop_toBottomOf="@+id/contenedorFiltros"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/contBottomNavigation"
+        app:layout_constraintHeight="wrap_content_constrained"
+        >
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/listaFeligreses"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            tools:itemCount="5"
+            tools:listitem="@layout/card_feligres" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/contBottomNavigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -95,9 +100,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:importantForAccessibility="no"
-        app:layout_constraintBottom_toTopOf="@+id/guideFloatBtn"
+        app:layout_constraintBottom_toTopOf="@+id/contBottomNavigation"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp"
         app:backgroundTint="@color/onSelectedColorBotBar"
         android:src="@drawable/add"
         app:tint="@color/white"
@@ -108,20 +114,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:importantForAccessibility="no"
-        app:layout_constraintBottom_toTopOf="@+id/guideFloatBtn"
+        app:layout_constraintBottom_toTopOf="@+id/contBottomNavigation"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="15dp"
+        android:layout_marginBottom="15dp"
         app:backgroundTint="@color/onSelectedColorBotBar"
         android:src="@drawable/chat_bubble"
         app:tint="@color/white"
         />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideFloatBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.86"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
