--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="onSelectedColorBotBar">#30aca8</color>
     <color name="fondoContenedorFiltro">#f4f4f4</color>
     <color name="txtResultados">#7c7c7d</color>
+    <color name="fondoCardListaFelirgeses">#f5f5f5</color>
 </resources>
