--- a/app/src/main/res/layout/fragment_listar.xml
+++ b/app/src/main/res/layout/fragment_listar.xml
@@ -46,10 +46,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/lblFiltro"
-            android:textColor="@color/txtResultados"
+            android:textColor="@color/onSelectedColorBotBar"
             android:textSize="18sp"
             android:fontFamily="@font/roboto_regular"
-            app:iconTint="@color/txtResultados"
+            app:iconTint="@color/onSelectedColorBotBar"
             app:icon="@drawable/filter"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -114,6 +114,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:importantForAccessibility="no"
+        android:enabled="false"
         app:layout_constraintBottom_toTopOf="@+id/contBottomNavigation"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="15dp"
@@ -121,6 +122,18 @@
         app:backgroundTint="@color/onSelectedColorBotBar"
         android:src="@drawable/chat_bubble"
         app:tint="@color/white"
+        />
+    <ProgressBar
+        android:id="@+id/progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+    <include
+        layout="@layout/sheet_filtros"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
 
