--- a/app/src/main/res/layout/item_feligres.xml
+++ b/app/src/main/res/layout/item_feligres.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 <androidx.constraintlayout.widget.ConstraintLayout
-    android:id="@+id/card_recordatorio"
+    android:id="@+id/card_feligres"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingTop="10dp"
