--- a/app/src/main/res/layout/fragment_listar_feligreses.xml
+++ b/app/src/main/res/layout/fragment_listar_feligreses.xml
@@ -7,110 +7,123 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-<!--    <include-->
-<!--        android:id="@+id/toolbar"-->
-<!--        layout="@layout/barra_busqueda"/>-->
-<!--    app:layout_constraintTop_toBottomOf="@+id/toolbar"-->
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/barra_busqueda"/>
 
-<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
-<!--        android:id="@+id/contenedorFiltros"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:background="@color/fondoContenedorFiltro"-->
-<!--        android:layout_height="45dp"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        >-->
-<!--        <TextView-->
-<!--            android:id="@+id/lblResultado"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:text="@string/lblResultados"-->
-<!--            android:fontFamily="@font/roboto_regular"-->
-<!--            android:textSize="18sp"-->
-<!--            android:textColor="@color/txtResultados"-->
-<!--            android:layout_marginHorizontal="20dp"-->
-<!--            android:layout_marginVertical="10dp"-->
-<!--            app:layout_constraintTop_toTopOf="parent"-->
-<!--            app:layout_constraintStart_toStartOf="parent"/>-->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/contenedorFiltros"
+        android:layout_width="match_parent"
+        android:background="@color/fondoContenedorFiltro"
+        android:layout_height="45dp"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        app:layout_constraintStart_toStartOf="parent"
+        >
 
-<!--        <Button-->
-<!--            style="@style/Widget.Material3.Button.TextButton.Icon"-->
-<!--            android:id="@+id/btnFiltrar"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:text="@string/lblFiltro"-->
-<!--            android:textColor="@color/onSelectedColorBotBar"-->
-<!--            android:textSize="18sp"-->
-<!--            android:fontFamily="@font/roboto_regular"-->
-<!--            app:iconTint="@color/onSelectedColorBotBar"-->
-<!--            app:icon="@drawable/filter"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintTop_toTopOf="parent"-->
-<!--            />-->
+        <TextView
+            android:id="@+id/lblResultado"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/lblResultados"
+            android:fontFamily="@font/roboto_regular"
+            android:textSize="18sp"
+            android:textColor="@color/txtResultados"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginVertical="10dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
 
-<!--    </androidx.constraintlayout.widget.ConstraintLayout>*-->
-<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
-<!--        android:id="@+id/contenedorLista"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="0dp"-->
-<!--        android:background="@color/fondoContenedorFiltro"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/contenedorFiltros"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintHeight="wrap_content_constrained"-->
-<!--        >-->
+        <Button
+            style="@style/Widget.Material3.Button.TextButton.Icon"
+            android:id="@+id/btnFiltrar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/lblFiltro"
+            android:textColor="@color/onSelectedColorBotBar"
+            android:textSize="18sp"
+            android:fontFamily="@font/roboto_regular"
+            app:iconTint="@color/onSelectedColorBotBar"
+            app:icon="@drawable/filter"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
 
-<!--        <androidx.recyclerview.widget.RecyclerView-->
-<!--            android:id="@+id/listaFeligreses"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="0dp"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintBottom_toBottomOf="parent"-->
-<!--            tools:itemCount="5"-->
-<!--            tools:listitem="@layout/card_feligres" />-->
-<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/contenedorLista"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="@color/fondoContenedorFiltro"
+        app:layout_constraintTop_toBottomOf="@+id/contenedorFiltros"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/contBottomNav"
+        app:layout_constraintHeight="wrap_content_constrained">
 
-<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
-<!--        android:id="@+id/btn_anadir_feligres"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:importantForAccessibility="no"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        android:layout_marginEnd="15dp"-->
-<!--        android:layout_marginBottom="15dp"-->
-<!--        app:backgroundTint="@color/onSelectedColorBotBar"-->
-<!--        android:src="@drawable/add"-->
-<!--        app:tint="@color/white"-->
-<!--        />-->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/listaFeligreses"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            tools:itemCount="5"
+            tools:listitem="@layout/item_feligres" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
-<!--        android:id="@+id/btn_enviar_sms"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:importantForAccessibility="no"-->
-<!--        android:enabled="false"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        android:layout_marginStart="15dp"-->
-<!--        android:layout_marginBottom="15dp"-->
-<!--        app:backgroundTint="@color/onSelectedColorBotBar"-->
-<!--        android:src="@drawable/chat_bubble"-->
-<!--        app:tint="@color/white"-->
-<!--        />-->
-<!--    <ProgressBar-->
-<!--        android:id="@+id/progress"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:visibility="gone"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"/>-->
-<!--    <include-->
-<!--        android:id="@+id/sheet"-->
-<!--        layout="@layout/sheet_filtros"-->
-<!--        />-->
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btn_anadir_feligres"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:importantForAccessibility="no"
+        app:layout_constraintBottom_toTopOf="@id/contBottomNav"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp"
+        app:backgroundTint="@color/onSelectedColorBotBar"
+        android:src="@drawable/add"
+        app:tint="@color/white"
+        />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btn_enviar_sms"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:importantForAccessibility="no"
+        android:enabled="false"
+        app:layout_constraintBottom_toTopOf="@id/contBottomNav"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="15dp"
+        android:layout_marginBottom="15dp"
+        app:backgroundTint="@color/onSelectedColorBotBar"
+        android:src="@drawable/chat_bubble"
+        app:tint="@color/white"
+        />
+    <ProgressBar
+        android:id="@+id/progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <LinearLayout
+        android:id="@+id/contBottomNav"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottom_navigation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/onSelectedColorBotBar"
+            app:menu="@menu/bottom_navigation_menu"
+            app:itemIconTint="@color/white"
+            app:itemTextColor="@color/white"/>
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
