--- a/app/src/main/res/layout/sheet_filtros.xml
+++ b/app/src/main/res/layout/sheet_filtros.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     style="@style/Widget.Material3.BottomSheet"
-    xmlns:tools="http://schemas.android.com/tools"
     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/sheet"
@@ -14,6 +14,28 @@
         app:layout_constraintStart_toStartOf="parent"
         >
 
+        <TextView
+            android:id="@+id/lblTiFiltro"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/roboto_bold"
+            android:text="@string/lblFiltrar"
+            android:textSize="25sp"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="15dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+        <Button
+            style="?attr/materialIconButtonStyle"
+            android:id="@+id/btnCerrarFiltros"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:icon="@drawable/close"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
+
         <GridLayout
             android:id="@+id/menuFiltros"
             android:layout_width="match_parent"
@@ -21,32 +43,11 @@
             android:columnCount="2"
             android:rowCount="9"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toBottomOf="@+id/lblTiFiltro">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_row="0"
-                android:layout_column="0"
-                android:layout_columnSpan="2"
-                android:fontFamily="@font/roboto_bold"
-                android:text="@string/lblFiltrar"
-                android:textSize="25sp"
-                android:layout_marginTop="10dp"
-                android:layout_marginStart="15dp"/>
-
-            <com.google.android.material.divider.MaterialDivider
-                android:layout_row="1"
-                android:layout_column="0"
-                android:layout_columnSpan="2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_row="2"
                 android:layout_column="0"
                 android:fontFamily="@font/roboto_medium"
                 android:text="@string/lblOrdenar"
@@ -59,16 +60,14 @@
                 android:id="@+id/lblCriterioOrden"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_row="2"
                 android:layout_column="1"
                 android:fontFamily="@font/roboto_light"
-                tools:text="hola."
+                android:text="@string/lblFiltroAlfabeticoAscen"
                 android:layout_marginStart="10dp"
                 android:textSize="20sp"
                 android:layout_marginTop="10dp"/>
 
             <RadioGroup
-                android:layout_row="3"
                 android:layout_column="0"
                 android:layout_columnSpan="2"
                 android:paddingStart="40dp"
@@ -82,6 +81,7 @@
                     android:id="@+id/radioBtnAlfabeticoAsc"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:checked="true"
                     android:text="@string/lblFiltroAlfabeticoAscen" />
 
                 <RadioButton
@@ -188,6 +188,7 @@
             android:backgroundTint="@color/onSelectedColorBotBar"
             android:enabled="false"
             android:layout_marginTop="25dp"
+            android:layout_marginBottom="20dp"
             app:layout_constraintTop_toBottomOf="@id/menuFiltros"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
