--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
     app:startDestination="@id/listarFragment">
     <fragment
         android:id="@+id/listarFragment"
         android:name="com.example.gestrenacer.view.fragment.ListarFragment"
-        android:label="ListarFragment" />
+        android:label="ListarFragment"
+        tools:layout="@layout/fragment_listar_feligreses"/>
 </navigation>
