--- a/app/src/main/res/layout/sheet_filtros.xml
+++ b/app/src/main/res/layout/sheet_filtros.xml
@@ -32,6 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:icon="@drawable/close"
+            android:drawableTint="@color/black"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             />
@@ -75,7 +76,8 @@
                 android:layout_marginTop="10dp"
                 android:layout_width="match_parent"
                 android:background="@color/fondoCardListaFelirgeses"
-                android:foregroundTint="@color/onSelectedColorBotBar">
+                android:foregroundTint="@color/onSelectedColorBotBar"
+                android:theme="@style/RadioButtonStyle">
 
                 <RadioButton
                     android:id="@+id/radioBtnAlfabeticoAsc"
