--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,11 @@
     </style>
 
     <style name="Theme.GestRenacer" parent="Base.Theme.GestRenacer" />
+
+    <style name="RadioButtonStyle" parent="Theme.Material3.DayNight">
+        <item name="colorPrimary">@color/onSelectedColorBotBar</item>
+    </style>
+    <style name="BottomBarStyle" parent="Base.Theme.GestRenacer">
+        <item name="colorSecondaryContainer">@color/colorBottomBar</item>
+    </style>
 </resources>
