--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/listarFragment">
+    app:startDestination="@id/agregarUsuariosFragment">
     <fragment
         android:id="@+id/agregarUsuariosFragment"
         android:name="com.example.gestrenacer.fragment.AgregarUsuariosFragment"
