intentando añadir binding a layout de editar usuario

--- a/app/src/main/res/layout/fragment_editar_usuario.xml
+++ b/app/src/main/res/layout/fragment_editar_usuario.xml
@@ -2,6 +2,18 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+
+
+    <data>
+        <variable
+            name="user"
+            type="com.example.gestrenacer.models.User" />
+        <variable
+            name="viewModel"
+            type="com.example.gestrenacer.viewmodel.AppViewModel" />
+    </data>
+
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
