--- a/app/src/main/res/layout/fragment_editar_usuario.xml
+++ b/app/src/main/res/layout/fragment_editar_usuario.xml
@@ -118,6 +118,7 @@
                         android:layout_marginTop="9dp"/>
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/editTextNombre"
                         android:layout_width="350dp"
                         android:layout_height="48dp"
                         android:hint="@string/inserte_su_nombre"
@@ -131,6 +132,7 @@
                         android:layout_marginTop="20dp"/>
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/editTextApellido"
                         android:layout_width="350dp"
                         android:layout_height="48dp"
                         android:hint="@string/inserte_su_apellido"
@@ -144,10 +146,13 @@
                         android:layout_marginTop="20dp"/>
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/editTextId"
                         android:layout_width="350dp"
                         android:layout_height="48dp"
                         android:hint="@string/digite_su_n_mero_de_id"
-                        android:textColorHint="@color/secondary" />
+                        android:textColorHint="@color/secondary"
+                        android:inputType="number"
+                        />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -156,12 +161,26 @@
                         android:textSize="16sp"
                         android:layout_marginTop="20dp"/>
 
-                    <AutoCompleteTextView
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/selectPrioridad"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                         android:layout_width="350dp"
-                        android:layout_height="48dp"
-                        android:hint="@string/seleccione_su_tipo_de_documento"
+                        android:layout_height="60dp"
                         android:textColorHint="@color/secondary"
-                        android:inputType="none"/>
+                        app:boxStrokeColor="@color/azulPrincipal"
+                        app:endIconTint="@color/azulPrincipal"
+                        app:hintTextColor="@color/azulPrincipal"
+                        app:startIconTint="@color/azulPrincipal">
+
+                        <AutoCompleteTextView
+                            android:id="@+id/autoCompleteTipoId"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="@string/seleccione_su_tipo_de_documento"
+                            android:importantForAccessibility="yes"
+                            android:inputType="none"
+                            android:text="@={user.tipoId}" />
+                    </com.google.android.material.textfield.TextInputLayout>
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -171,10 +190,12 @@
                         android:layout_marginTop="20dp"/>
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/editTextCelular"
                         android:layout_width="350dp"
                         android:layout_height="48dp"
                         android:hint="@string/digite_su_n_mero_de_celular"
-                        android:textColorHint="@color/secondary" />
+                        android:textColorHint="@color/secondary"
+                        android:inputType="phone"/>
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -184,6 +205,7 @@
                         android:layout_marginTop="20dp"/>
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/editTextDireccion"
                         android:layout_width="350dp"
                         android:layout_height="48dp"
                         android:hint="@string/inserte_su_direcci_n"
@@ -197,6 +219,7 @@
                         android:layout_marginTop="20dp"/>
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/editTextEps"
                         android:layout_width="350dp"
                         android:layout_height="48dp"
                         android:hint="@string/inserte_su_eps"
@@ -255,6 +278,7 @@
                         android:layout_marginTop="9dp"/>
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/editTextNombreContacto"
                         android:layout_width="350dp"
                         android:layout_height="48dp"
                         android:hint="@string/inserte_el_nombre_del_contacto"
@@ -268,10 +292,12 @@
                         android:layout_marginTop="20dp"/>
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/editTextCelularContacto"
                         android:layout_width="350dp"
                         android:layout_height="48dp"
                         android:hint="@string/digite_el_celular_de_su_contacto"
-                        android:textColorHint="@color/secondary" />
+                        android:textColorHint="@color/secondary"
+                        android:inputType="phone"/>
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -281,6 +307,7 @@
                         android:layout_marginTop="20dp"/>
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/editTextParentescoContacto"
                         android:layout_width="350dp"
                         android:layout_height="48dp"
                         android:hint="@string/parentesco_con_su_contacto"
@@ -294,6 +321,7 @@
                         android:layout_marginTop="20dp"/>
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/editTextDireccionContacto"
                         android:layout_width="350dp"
                         android:layout_height="48dp"
                         android:hint="@string/direcci_n_de_su_contacto"
@@ -371,6 +399,80 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:visibility="visible">
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="11dp">
+                        <TextView
+                            android:id="@+id/tvSeparadorEstadoAtencion"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/subtituloEstadoDeAtencion"
+                            android:textSize="17sp"
+                            android:textStyle="bold"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            android:textColor="@color/black"/>
+
+                        <View
+                            android:layout_width="0dp"
+                            android:layout_height="1dp"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintEnd_toStartOf="@id/tvSeparadorEstadoAtencion"
+                            app:layout_constraintTop_toTopOf="parent"
+                            android:layout_marginEnd="7dp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            android:background="@color/secondary"/>
+
+                        <View
+                            android:layout_width="0dp"
+                            android:layout_height="1dp"
+                            app:layout_constraintStart_toEndOf="@id/tvSeparadorEstadoAtencion"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            android:layout_marginStart="7dp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            android:background="@color/secondary"/>
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/estado_de_atencion"
+                        android:textSize="16sp"
+                        android:layout_marginTop="20dp"/>
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/selectEstadoAtecion"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                        android:layout_width="350dp"
+                        android:layout_height="60dp"
+                        android:textColorHint="@color/secondary"
+                        app:boxStrokeColor="@color/azulPrincipal"
+                        app:endIconTint="@color/azulPrincipal"
+                        app:hintTextColor="@color/azulPrincipal"
+                        app:startIconTint="@color/azulPrincipal">
+
+                        <AutoCompleteTextView
+                            android:id="@+id/autoCompleteEstadoAtencion"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="@string/selecc_atencion"
+                            android:importantForAccessibility="yes"
+                            android:inputType="none"
+                            android:text="@={user.tipoId}" />
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:orientation="vertical">
 
                     <androidx.constraintlayout.widget.ConstraintLayout
@@ -435,6 +537,7 @@
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
                 </LinearLayout>
+
 
             </LinearLayout>
 
