ventana funcional implementada

--- a/app/src/main/res/layout/fragment_editar_usuario.xml
+++ b/app/src/main/res/layout/fragment_editar_usuario.xml
@@ -542,7 +542,7 @@
             </LinearLayout>
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/buttonEditar"
                 android:layout_width="320dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
