--- a/app/src/main/res/layout/fragment_agregar_usuarios.xml
+++ b/app/src/main/res/layout/fragment_agregar_usuarios.xml
@@ -9,7 +9,7 @@
             type="com.example.gestrenacer.models.User" />
         <variable
             name="viewModel"
-            type="com.example.gestrenacer.viewmodel.AppViewModel" />
+            type="com.example.gestrenacer.viewmodel.UserViewModel" />
     </data>
 
     <ScrollView
