--- a/app/src/main/res/layout/fragment_listar_feligreses.xml
+++ b/app/src/main/res/layout/fragment_listar_feligreses.xml
@@ -56,8 +56,7 @@
         android:background="@color/fondoContenedorFiltro"
         app:layout_constraintTop_toBottomOf="@+id/contenedorFiltros"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/contBottomNav"
-        app:layout_constraintHeight="wrap_content_constrained">
+        app:layout_constraintBottom_toTopOf="@id/contBottomNav">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/listaFeligreses"
@@ -65,8 +64,8 @@
             android:layout_height="match_parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            tools:itemCount="5"
-            tools:listitem="@layout/item_feligres" />
+            tools:itemCount="1"
+            tools:listitem="@layout/item_user" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
