--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,25 @@
     </style>
 
     <style name="Theme.GestRenacer" parent="Base.Theme.GestRenacer" />
+
+    <style name="RadioButtonStyle" parent="Theme.Material3.DayNight">
+        <item name="colorPrimary">@color/onSelectedColorBotBar</item>
+    </style>
+    <style name="BottomBarStyle" parent="Base.Theme.GestRenacer">
+        <item name="colorSecondaryContainer">@color/colorBottomBar</item>
+    </style>
+
+    <style name="Theme.App" parent="Theme.Material3.DayNight">
+        <item name="materialSwitchStyle">@style/Widget.App.Switch</item>
+    </style>
+
+    <style name="Widget.App.Switch" parent="Widget.Material3.CompoundButton.MaterialSwitch">
+        <item name="materialThemeOverlay">@style/ThemeOverlay.App.Switch</item>
+    </style>
+
+    <style name="ThemeOverlay.App.Switch" parent="">
+        <item name="colorPrimary">@color/azulPrincipal</item>
+        <item name="colorSurfaceContainerHighest">@color/secondary</item>
+    </style>
+
 </resources>
