login y autenticacion msm como fragment

--- a/app/src/main/res/layout/fragment_verify_sms.xml
+++ b/app/src/main/res/layout/fragment_verify_sms.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:padding="16dp"
     android:gravity="center">
-//
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -13,12 +13,12 @@
         android:layout_marginBottom="20dp" />
 
     <EditText
-        android:id="@+id/codeInput"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Código SMS"
-        android:inputType="number"
-        android:padding="10dp" />
+        android:id="@+id/verificationCodeInput"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:hint="Código SMS"
+    android:inputType="number"
+    android:padding="10dp" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/verifyButton"
