--- a/app/src/main/res/layout/fragment_agregar_usuarios.xml
+++ b/app/src/main/res/layout/fragment_agregar_usuarios.xml
@@ -387,6 +387,8 @@
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
                     <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/txtRol"
+                        android:visibility="gone"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="25dp">
@@ -425,6 +427,7 @@
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/selectRole"
+                    android:visibility="gone"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                     android:layout_width="350dp"
                     android:layout_height="60dp"
@@ -441,7 +444,6 @@
                         android:hint="Selecciones rol a asignar"
                         android:importantForAccessibility="yes"
                         android:inputType="none"
-                        android:text="Feligrés"
                         />
                 </com.google.android.material.textfield.TextInputLayout>
 
