--- a/app/src/main/res/layout/fragment_editar_usuario.xml
+++ b/app/src/main/res/layout/fragment_editar_usuario.xml
@@ -461,8 +461,10 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/contRol"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:visibility="gone"
                     android:orientation="vertical">
 
                     <androidx.constraintlayout.widget.ConstraintLayout
