--- a/app/src/main/res/layout/fragment_listar_feligreses.xml
+++ b/app/src/main/res/layout/fragment_listar_feligreses.xml
@@ -54,6 +54,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:background="@color/fondoContenedorFiltro"
+        android:paddingBottom="10dp"
         app:layout_constraintTop_toBottomOf="@+id/contenedorFiltros"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@id/contBottomNav">
@@ -73,6 +74,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:importantForAccessibility="no"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@id/contBottomNav"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginEnd="15dp"
@@ -88,6 +90,7 @@
         android:layout_height="wrap_content"
         android:importantForAccessibility="no"
         android:enabled="false"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@id/contBottomNav"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="15dp"
@@ -111,6 +114,7 @@
         android:id="@+id/contBottomNav"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
