--- a/app/src/main/res/layout/fragment_verify_sms.xml
+++ b/app/src/main/res/layout/fragment_verify_sms.xml
@@ -16,6 +16,7 @@
         android:id="@+id/verificationCodeInput"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+        android:maxLength="6"
     android:hint="Código SMS"
     android:inputType="number"
     android:padding="10dp" />
@@ -25,8 +26,9 @@
         android:layout_width="250dp"
         android:layout_height="38dp"
         android:layout_marginTop="20dp"
-        android:text="Verificar Código"
-        android:textColor="@android:color/white"
         android:background="@drawable/button_background"
-        android:gravity="center" />
+        android:gravity="center"
+        android:text="Verificar Código"
+        android:textAllCaps="false"
+        android:textColor="@android:color/white" />
 </LinearLayout>
