--- a/app/src/main/res/layout/fragment_editar_usuario.xml
+++ b/app/src/main/res/layout/fragment_editar_usuario.xml
@@ -130,6 +130,31 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:text="@string/fecha_de_nacimiento"
+                        android:textSize="16sp"
+                        android:layout_marginTop="20dp"/>
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:layout_width="350dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="4dp"
+                        >
+
+                        <EditText
+                            android:id="@+id/editTextFechaNacimiento"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="@string/seleccione_fecha_de_nacimiento"
+                            android:autofillHints="none"
+                            android:padding="14dp"
+                            android:inputType="none"
+                            android:focusable="false"
+                            />
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:text="@string/n_mero_de_identificaci_n"
                         android:textSize="16sp"
                         android:layout_marginTop="20dp"/>
@@ -169,6 +194,60 @@
                             android:importantForAccessibility="yes"
                             android:inputType="none"
                              />
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/sexo"
+                        android:textSize="16sp"
+                        android:layout_marginTop="20dp"/>
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/selectSexo"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                        android:layout_width="350dp"
+                        android:layout_height="60dp"
+                        android:textColorHint="@color/secondary"
+                        app:boxStrokeColor="@color/azulPrincipal"
+                        app:endIconTint="@color/azulPrincipal"
+                        app:hintTextColor="@color/azulPrincipal"
+                        app:startIconTint="@color/azulPrincipal">
+
+                        <AutoCompleteTextView
+                            android:id="@+id/autoCompleteSexo"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="@string/seleccione_el_sexo"
+                            android:importantForAccessibility="yes"
+                            android:inputType="none" />
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/estado_civil"
+                        android:textSize="16sp"
+                        android:layout_marginTop="20dp"/>
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/selectEstadoCivil"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                        android:layout_width="350dp"
+                        android:layout_height="60dp"
+                        android:textColorHint="@color/secondary"
+                        app:boxStrokeColor="@color/azulPrincipal"
+                        app:endIconTint="@color/azulPrincipal"
+                        app:hintTextColor="@color/azulPrincipal"
+                        app:startIconTint="@color/azulPrincipal">
+
+                        <AutoCompleteTextView
+                            android:id="@+id/autoCompleteEstadoCivil"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="@string/seleccione_el_estado_civil"
+                            android:importantForAccessibility="yes"
+                            android:inputType="none"/>
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <TextView
@@ -317,6 +396,61 @@
                         android:textColorHint="@color/secondary" />
 
                 </LinearLayout>
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="25dp">
+                    <TextView
+                        android:id="@+id/tvSepararObservaciones"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/observaciones"
+                        android:textSize="17sp"
+                        android:textStyle="bold"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:textColor="@color/black"/>
+
+                    <View
+                        android:layout_width="0dp"
+                        android:layout_height="1dp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toStartOf="@id/tvSepararObservaciones"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:layout_marginEnd="7dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        android:background="@color/secondary"/>
+
+                    <View
+                        android:layout_width="0dp"
+                        android:layout_height="1dp"
+                        app:layout_constraintStart_toEndOf="@id/tvSepararObservaciones"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:layout_marginStart="7dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        android:background="@color/secondary"/>
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/observaciones"
+                    app:counterEnabled="true"
+                    app:counterMaxLength="160">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/editTextObsevaciones"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="textMultiLine"
+                        android:minLines="3"
+                        android:gravity="top|start"
+                        android:padding="8dp"/>
+
+                </com.google.android.material.textfield.TextInputLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
