Made pending users fragment accessible

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -25,7 +25,7 @@
             app:destination="@id/listarFragment" />
     </fragment>
 
-    <fragment
+     <fragment
         android:id="@+id/listarFragment"
         android:name="com.example.gestrenacer.view.fragment.ListarFragment"
         android:label="ListarFragment"
@@ -36,7 +36,10 @@
         <action
             android:id="@+id/action_listarFragment_to_editarUsuarioFragment"
             app:destination="@id/editarUsuarioFragment" />
-    </fragment>
+         <action
+             android:id="@+id/action_listarFragment_to_pendingFragment"
+             app:destination="@id/pendingFragment" />
+     </fragment>
 
     <fragment
         android:id="@+id/loginFragment"
@@ -62,6 +65,14 @@
 
         <action
             android:id="@+id/action_verifyFragment_to_listarFragment"
+            app:destination="@id/listarFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/pendingFragment"
+        android:name="com.example.gestrenacer.view.fragment.PendingFragment"
+        android:label="PendingFragment" >
+        <action
+            android:id="@+id/action_pendingFragment_to_listarFragment"
             app:destination="@id/listarFragment" />
     </fragment>
 
